@@ -1,3 +1,8 @@
+2008-12-16  Mark Wielaard  <mjw@redhat.com>
+
+	* translate.cxx (dump_unwindsyms): Simplify
+	dwfl_module_relocate_address workaround.
+
 2008-12-15  Mark Wielaard  <mjw@redhat.com>
 
 	* tapsets.cxx (utrace_derived_probe_group::emit_module_decls):
